--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>*~ Turu Turu ~*</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-    <link rel="shortcut icon" href="IMG/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="main/favicon.ico" type="image/x-icon">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-MQH0E2TVD3"></script>
     <script>
@@ -22,7 +22,7 @@
 
     <header>
         <!--modificar para coracao sej-->
-        <img src="IMG/logo-alura.png" alt="logo da Alura">
+        <img src="main/logo-alura.png" alt="logo da Alura">
         <h1>Decodificador para <a href="https://www.alura.com.br/" target="_blank">Alura</a></h1>
     </header>
 
