--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
         <!--modificar para coracao sej-->
         <img src="IMG/logo-alura.png" alt="logo da Alura">
-        <h1>Decodificador para <a href="https://www.alura.com.br/" target="_blank">Alura</a></h1>
+        <h1>Decodificador de texto para Alura</h1>
     </header>
 
     <main>
