--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     <header>
         <!--modificar para coracao sej-->
         <img src="IMG/logo-alura.png" alt="logo da Alura">
-        <h1>Decodificador de texto para Alura</h1> vrs Fã de S&J
+        <h1>Decodificador de texto para Alura</h1>
     </header>
 
     <main>
 
         <div class="area_texto">
             <textarea  id="escreva" placeholder="escreva aqui!"  spellcheck="false"></textarea>
-            <textarea id="texto" placeholder="a Sandy e o Junior dizem:"  readonly spellcheck="false" onclick="copiarTexto()"></textarea>
+            <textarea id="texto" placeholder="Sandy & Junior dizem:"  readonly spellcheck="false" onclick="copiarTexto()"></textarea>
             
         </div>
         
