--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <link rel="shortcut icon" href="IMG/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" crossorigin="anonymous" />
+</head>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-MQH0E2TVD3"></script>
     <script>
@@ -46,7 +48,29 @@
         
         </main>
 
-    <footer><p>desenvolvido por Helena Fernandes - 2023</p></footer>
+    <footer><p>Desenvolvido com <img src="img/heart-regular.svg" class="coracao" title="amor / love"> por Helena Fernandes - 2023</p>
+
+        <p> Me encontre:</p>
+
+    <div>
+
+        <a href="https://github.com/lenalucky/challengeOne" target="_blank"><img src="img/github.svg" class="icones"></a>
+
+
+        <a href="https://www.linkedin.com/in/helena-fernandes-7b057616/" target="_blank"><img src="img/linkedin.svg" class="icones"></a>
+
+        <a href="mailton: helen.nandes@gmail.com" title="helen.nandes@gmail.com"><img src="img/mail.svg" class="icones"></a>
+
+    </div>
+
+    <p><b>Disclaimer</b></p>
+
+    <p><i>O conteúdo desta página é para fins acadêmicos do challenge One, Next Education Alura.</i></p>
+
+    <p>Música citada "Quando você passa (Turu Turu)" Sandy & Junior.</p>
+
+
+    </footer>
 
 </body>
 </html>
