--- a/index.html
+++ b/index.html
@@ -48,18 +48,18 @@
         
         </main>
 
-    <footer><p>Desenvolvido com <img src="heart-regular.svg" class="coracao" title="amor / love"> por Helena Fernandes - 2023</p>
+    <footer><p>Desenvolvido com <img src="IMG/heart-regular.svg" class="coracao" title="amor / love"> por Helena Fernandes - 2023</p>
 
         <p> Me encontre:</p>
 
     <div>
 
-        <a href="https://github.com/lenalucky/challengeOne" target="_blank"><img src="github.svg" class="icones"></a>
+        <a href="https://github.com/lenalucky/challengeOne" target="_blank"><img src="IMG/github.svg" class="icones"></a>
 
 
-        <a href="https://www.linkedin.com/in/helena-fernandes-7b057616/" target="_blank"><img src="linkedin.svg" class="icones"></a>
+        <a href="https://www.linkedin.com/in/helena-fernandes-7b057616/" target="_blank"><img src="IMG/linkedin.svg" class="icones"></a>
 
-        <a href="mailton: helen.nandes@gmail.com" title="helen.nandes@gmail.com"><img src="mail.svg" class="icones"></a>
+        <a href="mailton: helen.nandes@gmail.com" title="helen.nandes@gmail.com"><img src="IMG/mail.svg" class="icones"></a>
 
     </div>
 
