--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <header>
         <!--modificar para coracao sej-->
         <img src="IMG/logo-alura.png" alt="logo da Alura">
-        <h1>Decodificador de texto para Alura</h1>
+        <h1>Decodificador de texto</h1>
+        <p><i><img src="IMG/icon-exclamation.svg" alt=""> apenas letras maiúsculas e sem acento</i></p>
     </header>
 
     <main>
