--- a/disclaimer.html
+++ b/disclaimer.html
@@ -72,7 +72,7 @@
 
     </div>
 
-    <p><b>Disclaimer</b></p>
+    <a href="index.html" title="Volte para o decodificador"><p><b>Usar o decodificador</b></p></a>
 
     <p><i>O conteúdo desta página é para fins acadêmicos do challenge One, Next Education Alura.</i></p>
 
