--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main>
 
         <div class="area_texto">
-            <textarea  id="escreva" placeholder="escreva aqui!"  spellcheck="false"></textarea>
+            <textarea  id="escreva" placeholder="Escreva aqui!"  spellcheck="false"></textarea>
             <textarea id="texto" placeholder="Sandy & Junior dizem:"  readonly spellcheck="false" onclick="copiarTexto()"></textarea>
             
         </div>
