--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>*~ Turu Turu ~*</title>
+    <link rel="reset" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <link rel="shortcut icon" href="IMG/favicon.ico" type="image/x-icon">
@@ -55,16 +56,16 @@
 
     <div>
 
-        <a href="https://github.com/lenalucky/challengeOne" target="_blank"><img src="IMG/github.svg" class="icones"></a>
+        <a href="https://github.com/lenalucky/challengeOne" target="_blank"><img src="IMG/github.svg" class="icones" title="github"></a>
 
 
-        <a href="https://www.linkedin.com/in/helena-fernandes-7b057616/" target="_blank"><img src="IMG/linkedin.svg" class="icones"></a>
+        <a href="https://www.linkedin.com/in/helena-fernandes-7b057616/" target="_blank"><img src="IMG/linkedin.svg" class="icones" title="linkedin"></a>
 
         <a href="mailton: helen.nandes@gmail.com" title="helen.nandes@gmail.com"><img src="IMG/mail.svg" class="icones"></a>
 
     </div>
 
-    <a href="disclaimer.html" title="acesse o manual"><p><b>Disclaimer</b></p></a>
+    <a href="disclaimer.html" title="acesse o manual" class="disclaimer"><p><b>Disclaimer</b></p></a>
 
     <p><i>O conteúdo desta página é para fins acadêmicos do challenge One, Next Education Alura.</i></p>
 
