--- a/disclaimer.html
+++ b/disclaimer.html
@@ -5,34 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>*~ Turu Turu ~*</title>
+    <link rel="reset" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <link rel="shortcut icon" href="IMG/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" crossorigin="anonymous" />
-</head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MQH0E2TVD3"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Rubik:wght@500&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Arvo&family=Montserrat&family=Rubik:wght@500&display=swap" rel="stylesheet">
 
-    gtag('config', 'G-MQH0E2TVD3');
-    </script>
 </head>
+
 <body>
 
     <header>
-        <!--modificar para coracao sej-->
-        <img src="IMG/logo-alura.png" alt="logo da Alura">
-        <a href="index.html" title="Volte para o decodificador"><h1>Decodificador de texto</h1>
-        <h2></a>
-
-         <img src="IMG/heart-regular.svg" class="coracao"> Disclaimer</h2>
+       
+        <img class="logo" src="IMG/logo-alura.png" alt="logo da Alura">
+        <a href="index.html" title="Volte para o decodificador"><h1>Decodificador de texto</h1></a>
 
     </header>
 
     <main>
+
+        <h2>Disclaimer</h2>
 
         <p>Olá, me chamo Helena e vou passar algumas informações sobre esse projeto.</p>
 
