--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Arvo&family=Montserrat&family=Rubik:wght@500&display=swap" rel="stylesheet">
 
 </head>
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-MQH0E2TVD3"></script>
     <script>
@@ -32,7 +33,7 @@
 
     <header>
         <!--modificar para coracao sej-->
-        <img src="IMG/logo-alura.png" alt="logo da Alura">
+        <img class="logo" src="IMG/logo-alura.png" alt="logo da Alura">
         <h1>Decodificador de texto</h1>
         <p><i><img src="IMG/icon-exclamation.svg" alt=""> apenas letras maiúsculas e sem acento</i></p>
     </header>
@@ -59,7 +60,7 @@
 
     <footer><p>Desenvolvido com <img src="IMG/heart-regular.svg" class="coracao" title="amor / love"> por Helena Fernandes - 2023</p>
 
-        <p> Me encontre:</p>
+        <p>Me encontre:</p>
 
     <div>
 
@@ -68,7 +69,7 @@
 
         <a href="https://www.linkedin.com/in/helena-fernandes-7b057616/" target="_blank"><img src="IMG/linkedin.svg" class="icones" title="linkedin"></a>
 
-        <a href="mailton: helen.nandes@gmail.com" title="helen.nandes@gmail.com"><img src="IMG/mail.svg" class="icones"></a>
+        <a href="mailton:helen.nandes@gmail.com" title="helen.nandes@gmail.com"><img src="IMG/mail.svg" class="icones"></a>
 
     </div>
 
