--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!--modificar para coracao sej-->
         <img class="logo" src="IMG/logo-alura.png" alt="logo da Alura">
         <h1>Decodificador de texto</h1>
-        <p><i><img src="IMG/icon-exclamation.svg" alt=""> apenas letras maiúsculas e sem acento</i></p>
+        <p><i><img src="IMG/icon-exclamation.svg" alt=""> apenas letras minúsculas e sem acento</i></p>
     </header>
 
     <main>
@@ -58,7 +58,7 @@
         
         </main>
 
-    <footer><p>Desenvolvido com <img src="IMG/heart-regular.svg" class="coracao" title="amor / love"> por Helena Fernandes - 2023</p>
+    <footer><p><b>Desenvolvido com <img src="IMG/heart-regular.svg" class="coracao" title="amor / love"> por Helena Fernandes - 2023</b></p>
 
         <p>Me encontre:</p>
 
